Added Cities to Repository and created method of economy assignment in CityService